@@ -9,11 +9,14 @@ module ActiveMerchant # :nodoc:
     class QuickpayGateway < Gateway
       self.abstract_class = true
 
+      DEFAULT_API_VERSION = QuickpayV10Gateway::API_VERSION
+      version DEFAULT_API_VERSION
+
       def self.new(options = {})
         options.fetch(:login) { raise ArgumentError.new('Missing required parameter: login') }
 
-        version = options[:login].to_i < 10000000 ? 10 : 7
-        if version <= 7
+        version = options[:login].to_i < 10000000 ? QuickpayV10Gateway::API_VERSION : QuickpayV4to7Gateway::API_VERSION
+        if version <= QuickpayV4to7Gateway::API_VERSION
           QuickpayV4to7Gateway.new(options)
         else
           QuickpayV10Gateway.new(options)
